typescript/checker/tests/conformance/parser/ecmascript5/Types/parserTypeQuery7.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            32,
        ),
        hi: BytePos(
            33,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Types/parserTypeQuery7.ts:1:15
  |
1 | var v: typeof A[]
  |               ^

